--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
           <div class="legend-label">Sow</div>
           <div class="legend-color" style="background-color: rgba(0,255,0, 0.5);"></div>
           <div class="legend-label">Harvest</div>
+          <div class="legend-color" style="background-color: rgba(191,127,63, 1);"></div>
+          <div class="legend-label">Sow/Harvest</div>
         </div>
       </div>
     <script src="script.js"></script>
