css styling and enter press for search

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="searchBar">
       <input type="text" id="searchInput" placeholder="Search..." list="searchOptions">
       <datalist id="searchOptions"></datalist>
-      <button id="searchButton" onClick="show"><i class="fa-solid fa-magnifying-glass"></i></button>
+      <button id="searchButton" onClick="show"><i class="fa-solid fa-seedling"></i></button>
     </div>
     <div id="searchResult" class="result"></div>
     <div class="legend-container">
